# twine

./: .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .isort.cfg  .readthedocs.yaml  .travis.yml  1247.misc.rst  AUTHORS  MANIFEST.in  README.rst  changelog.rst  codecov.yml  dev-requirements.txt  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_upload_failed.yml  02_bug.yml  03_feature.yml  04_other.yml  bug-report.yml  config.yml
.github/workflows/: codeql-analysis.yml  integration.yml  main.yml  release.yml
_stubs/twine/: __main__.pyi  cli.pyi
changelog/: +24f6a8f8.feature.rst  1005.misc.rst  1024.misc.rst  1028.misc.rst  1040.misc.rst  1104.misc.rst  1115.bugfix.rst  1116.bugfix.rst  1121.removal.rst  1180.misc.txt  1184.misc.rst  1191.misc.txt  1192.bug.txt  1195.removal.txt  1217.bugfix.rst  1220.bugfix.rst  1221.feature.rst  1224.bugfix.rst  1229.bugfix.rst  1240.bugfix.rst  1246.feature.rst  1247.misc.rst  1251.removal.rst  1262.removal.rst  1271.feature.rst  1282.feature.rst  670.feature.rst  675.feature.rst  678.bugfix.rst  680.doc.rst  684.bugfix.rst  685.feature.rst  693.bugfix.rst  698.bugfix.rst  708.feature.rst  714.bugfix.rst  715.feature.rst  718.doc.rst  728.feature.rst  732.feature.rst  (+34 more)
docs/: Makefile  api.rst  changelog.html  changelog.rst  conf.py  contributing.rst  index.rst  keyring-support.rst  make.bat  requirements.txt
docs/_static/: .empty
docs/api/: twine.auth.rst  twine.cli.rst  twine.commands.check.rst  twine.commands.register.rst  twine.commands.rst  twine.commands.upload.rst  twine.exceptions.rst  twine.package.rst  twine.repository.rst  twine.rst  twine.settings.rst  twine.utils.rst  twine.wheel.rst  twine.wininst.rst
docs/internal/: twine.auth.rst  twine.cli.rst  twine.commands.check.rst  twine.commands.register.rst  twine.commands.rst  twine.package.rst  twine.repository.rst  twine.rst  twine.settings.rst  twine.utils.rst  twine.wheel.rst
stubs/: .flake8  importlib_metadata.pyi
stubs/pkginfo/: __init__.pyi  bdist.pyi  distribution.pyi  installed.pyi  sdist.pyi
stubs/twine/: __main__.pyi  cli.pyi
tests/: conftest.py  helpers.py  test_auth.py  test_check.py  test_cli.py  test_commands.py  test_integration.py  test_main.py  test_mypy_integration.py  test_package.py  test_parse_config_encoding.py  test_pep561.py  test_register.py  test_repository.py  test_sdist.py  test_settings.py  test_upload.py  test_utils.py  test_wheel.py
tests/cassettes/test_integration/: test_pypi_error.yaml  test_pypi_upload.yaml
tests/commands/: upload_test.py
tests/fixtures/: deprecated-pypirc  everything.metadata23  everything.metadata24  twine-1.5.0-py2.py3-none-any.whl.asc  twine-1.6.5-py2.py3-none-any.whl  twine-3.3.0-py3.9.egg
tests/upload/: __init__.py
twine/: __about__.py  __init__.py  __main__.py  _installed.py  _run.py  api.py  application.py  auth.py  cli.py  common.py  distribution.py  exceptions.py  ivy.py  package.py  repository.py  sdist.py  settings.py  types.py  utils.py  wheel.py  wininst.py
twine/commands/: __init__.py  check.py  register.py  upload.py
twine/compat/: py39.py
