# pyproject.toml
[build-system]
requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "twine"
authors = [
	{ name = "Donald Stufft and individual contributors", email = "donald@stufft.io" },
]
description = "Collection of utilities for publishing packages on PyPI"
classifiers = [
	"Intended Audience :: Developers",
	"License :: OSI Approved :: Apache Software License",
	"Natural Language :: English",
	"Operating System :: MacOS :: MacOS X",
	"Operating System :: POSIX",
	"Operating System :: POSIX :: BSD",
	"Operating System :: POSIX :: Linux",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.8"
dependencies = [
	"pkginfo >= 1.8.1",
	"readme-renderer >= 35.0",
	"requests >= 2.20",
	"requests-toolbelt >= 0.8.0, != 0.9.0",
	"urllib3 >= 1.26.0",
	"importlib-metadata >= 3.6",
	"keyring >= 15.1",
	"rfc3986 >= 1.4.0",
	"rich >= 12.0.0",
]
dynamic = ["version"]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://twine.readthedocs.io/"
Source = "https://github.com/pypa/twine/"
Documentation = "https://twine.readthedocs.io/en/latest/"
"Packaging tutorial" = "https://packaging.python.org/tutorials/packaging-projects/"

[project.entry-points."twine.registered_commands"]
check = "twine.commands.check:main"
upload = "twine.commands.upload:main"
register = "twine.commands.register:main"

[project.scripts]
twine = "twine.__main__:main"

[tool.setuptools]
packages = [
	"twine",
	"twine.commands",
]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools_scm]

[tool.towncrier]
package = "twine"
filename = "docs/changelog.rst"
directory = "changelog"
issue_format = "`#{issue} <https://github.com/pypa/twine/issues/{issue}>`_"
underlines = ["-", "^"]
