[wheel]
universal = 1

[check-manifest]
ignore =
    .travis.yml
    tox.ini

[metadata]
requires-dist =
    tqdm >= 4.14
    requests >= 2.5.0, != 2.15, != 2.16
    requests-toolbelt >= 0.8.0
    pkginfo >= 1.4.2
    setuptools >= 0.7.0
    argparse; python_version == '2.6'
    pyblake2; extra == 'with-blake2' and python_version < '3.6'
    keyring; extra == 'keyring'
