[metadata]
license_file = LICENSE
name = twine
author = Donald Stufft and individual contributors
author_email = donald@stufft.io
description = Collection of utilities for publishing packages on PyPI
long_description = file:README.rst
url = https://twine.readthedocs.io/
project_urls =
    Source = https://github.com/pypa/twine/
    Documentation = https://twine.readthedocs.io/en/latest/
    Packaging tutorial = https://packaging.python.org/tutorials/distributing-packages/
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages =
    twine
    twine.commands
python_requires = >=3.6
install_requires=
    pkginfo >= 1.4.2
    readme_renderer >= 21.0
    requests >= 2.20
    requests-toolbelt >= 0.8.0, != 0.9.0
    setuptools >= 0.7.0
    tqdm >= 4.14
    importlib_metadata; python_version < "3.8"
    keyring >= 15.1
    rfc3986 >= 1.4.0
    colorama >= 0.4.3
setup_requires =
    setuptools_scm >= 1.15
include_package_data = True

[options.entry_points]
twine.registered_commands =
    check = twine.commands.check:main
    upload = twine.commands.upload:main
    register = twine.commands.register:main
console_scripts =
    twine = twine.__main__:main
