[metadata]
license_files = LICENSE
name = twine
author = Donald Stufft and individual contributors
author_email = donald@stufft.io
description = Collection of utilities for publishing packages on PyPI
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://twine.readthedocs.io/
project_urls =
    Source = https://github.com/pypa/twine/
    Documentation = https://twine.readthedocs.io/en/latest/
    Packaging tutorial = https://packaging.python.org/tutorials/packaging-projects/
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython

[options]
packages =
    twine
    twine.commands
python_requires = >=3.8
install_requires=
    pkginfo >= 1.8.1
    readme-renderer >= 35.0
    requests >= 2.20
    requests-toolbelt >= 0.8.0, != 0.9.0
    urllib3 >= 1.26.0
    importlib-metadata >= 3.6
    keyring >= 15.1
    rfc3986 >= 1.4.0
    rich >= 12.0.0
include_package_data = True

[options.entry_points]
twine.registered_commands =
    check = twine.commands.check:main
    upload = twine.commands.upload:main
    register = twine.commands.register:main
console_scripts =
    twine = twine.__main__:main
